# python

./: README.md
local-llm-openwebui-gguf-setup/: README.md  environment.yaml  venv.sh
local-llm-openwebui-gguf-setup/src/: ask.py  conf.py  last_change.py  llama_cpp_server_start.py  openai_router.py  search_web.py  sync.py
monolithic-api-cli/: README.md  pyproject.toml  readme.md
monolithic-api-cli/env/: .env
monolithic-api-cli/libs/: libs_module.py  libs_protocol.py  libs_service.py
monolithic-api-cli/libs/cdn/: controller.py  module.py  service.py
monolithic-api-cli/libs/conf/: loader.py  module.py  service.py  setting.py  static.py
monolithic-api-cli/libs/image_processing/: module.py  service.py
monolithic-api-cli/libs/jwt/: exceptions.py  guard.py  http_guard.py  keystore.py  manual.md  module.py  revocation_store.py  service.py  static.py  utils.py
monolithic-api-cli/libs/log/: configuration.py  module.py  service.py  static.py
monolithic-api-cli/libs/sql_alchemy/: __init__.py  configuration.py  module.py  protocol.py  repository.py  service.py
monolithic-api-cli/libs/strawberry_graphql/: decorator.py  module.py  router.py  schema.py  service.py
monolithic-api-cli/libs/template_engine/: module.py  service.py
monolithic-api-cli/src/: app_cli.py  app_controller.py  app_module.py  app_service.py  main.py
monolithic-api-cli/src/ai/: ai_module.py  ai_service.py
monolithic-api-cli/src/ai/project/: cli.py  controller.py  module.py  service.py
monolithic-api-cli/src/ai/tenant/: cli.py  cli_sqlalchemy.py  controller.py  controller_sqlalchemy.py  dto_x.py  entity.py  entity_sqlalchemy.py  module.py  repository.py  resolver_x.py  service.py  service_sqlalchemy.py
monolithic-api-cli/src/ai/tenant_user/: cli.py  controller.py  module.py  service.py
monolithic-api-cli/src/shared/: shared_module.py  shared_service.py
monolithic-api-cli/src/shared/api_endpoint_auth/: entity.py  enum.py  factory.py  jwt.py  module.py  repository.py  service.py  utils.py
monolithic-api-cli/src/shared/api_endpoint_auth/public/: controller.py  dto.py  resolver.py
monolithic-api-cli/src/shared/api_endpoint_auth_file/: controller.py  dto.py  entity.py  enum.py  factory.py  module.py  resolver.py  service.py
rag-search/: insert-data.py  search-script.py
text-embeddings-and-groups-automatically/: README.md  app.py  readme.md
