[project]
name = "python_api_cli"
version = "0.1.0"
description = "This Python project"
authors = [{ name = "Thats End PVT. LTD.", email = "author@local.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pynest-api (>=0.4.0,<0.5.0)",
    "debugpy (>=1.8.17,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "typed-settings (>=25.0.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncmy (>=0.2.10,<0.3.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "strawberry-sqlalchemy-mapper (>=0.7.0,<0.8.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "typer (>=0.19.1,<0.20.0)",
    "rich (>=14.1.0,<15.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "python-slugify[unidecode] (>=8.0.4,<9.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyvips[binary] (>=3.0.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=bfw_python_api_cli --cov-report=term-missing"

[tool.poetry]
name = "bfw_python_api_cli"
version = "0.1.0"
packages = [{ include = "src", from = "." }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts] # in some cases run: ~ uvicorn src.main:boot_api --factory --reload
start-api = "src.main:start_api" # run api app
debug-api = "src.main:debug_api" # run api app in debug mode
start-cli = "src.main:start_cli" # run cli app
debug-cli = "src.main:debug_cli" # run cli app in debug mode

[tool.poe.tasks]
start-api-local = { cmd = "poetry run start-api", env = { PY_ENV = "local" } } # api
debug-api-local = { cmd = "poetry run debug-api", env = { PY_ENV = "local" } }
start-api-dev = { cmd = "poetry run start-api", env = { PY_ENV = "dev" } }
debug-api-dev = { cmd = "poetry run debug-api", env = { PY_ENV = "dev" } }
start-api-prod = { cmd = "poetry run start-api", env = { PY_ENV = "prod" } }
debug-api-prod = { cmd = "poetry run debug-api", env = { PY_ENV = "prod" } }
start-cli-local = { cmd = "poetry run start-cli", env = { PY_ENV = "local" } } # cli
debug-cli-local = { cmd = "poetry run debug-cli", env = { PY_ENV = "local" } }
start-cli-dev = { cmd = "poetry run start-cli", env = { PY_ENV = "dev" } }
debug-cli-dev = { cmd = "poetry run debug-cli", env = { PY_ENV = "dev" } }
start-cli-prod = { cmd = "poetry run start-cli", env = { PY_ENV = "prod" } }
debug-cli-prod = { cmd = "poetry run debug-cli", env = { PY_ENV = "prod" } }